wait for sms gateway

--- a/app/views/navbar.phtml
+++ b/app/views/navbar.phtml
@@ -5,119 +5,122 @@
             <div class="left-sidebar-scroll">
                 <div class="left-sidebar-content">
                     <ul class="sidebar-elements">
+                        <?php if(in_array ($active_user_data[ 'previledge' ], ['1', '2', '3', '4'])): ?>
 
-                        <li class="divider">
-                            <span class="label label-primary">Data Tender</span>
-                        </li>
-
-                        <li class="<?= $this->uri ('dashboard', 'active') ?>">
-                            <a href="<?= $this->pathFor ('DashboardPage') ?>"><i class="icon mdi mdi-home"></i><span>Dashboard</span></a>
-                        </li>
-
-                        <li class="parent <?= ($this->uri(0, 'tender') && !$this->uri(1, 'approval') ? 'active':'') ?>">
-                            <a href="#"><i class="icon mdi mdi-assignment"></i><span>Berita Tender</span></a>
-                            <ul class="sub-menu">
-                                <li class="<?= ($this->uri(0, 'tender') && $this->uri(1, 'list') ? 'active':'') ?>">
-                                    <a href="<?= $this->pathFor ('beritaTender_daftar') ?>">Daftar Tender</a>
-                                </li>
-                                <li class="<?= ($this->uri(0, 'tender') && $this->uri(1, 'detail') ? 'active':'hidden') ?>">
-                                    <a role="button">Detail Tender</a>
-                                </li>
-                                <li class="<?= ($this->uri(0, 'tender') && $this->uri(1, 'add') ? 'active':'') ?>">
-                                    <a href="<?= $this->pathFor ('beritaTender_tambah') ?>">Tambah</a>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li class="parent <?= ($this->uri(0, 'rks-acara') && !$this->uri(1, 'approval') ? 'active open':'') ?>">
-                            <a href="#"><i class="icon mdi mdi-assignment"></i><span>RKS dan Berita Acara</span></a>
-                            <ul class="sub-menu">
-                                <li class="<?= ($this->uri(0, 'rks-acara') && $this->uri(1, 'list') ? 'active':'') ?>">
-                                    <a href="<?= $this->pathFor ('rksAcara_daftar') ?>">Daftar Berita Tender</a>
-                                </li>
-                                <li class="<?= ($this->uri(0, 'rks-acara') && $this->uri(1, 'detail') ? 'active':'hidden') ?>">
-                                    <a href="">Daftar RKS Tender</a>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <?php if (in_array ($active_user_data[ 'previledge' ], ['3'])): ?>
-                        <li class="<?= $this->uri (0, 'unit-kerja', 'active') ?>">
-                            <a href="<?= $this->pathFor ('unitKerja_daftar') ?>">
-                                <i class="icon mdi mdi-assignment-account"></i><span>Penenturan Unit Kerja</span>
-                            </a>
-                        </li>
-                        <?php endif; ?>
-
-                        <?php if (in_array ($active_user_data[ 'previledge' ], ['3', '4'])): ?>
-                            <li class="<?= $this->uri (0, 'boq', 'parent active open') ?>">
-                                <a href="<?= $this->pathFor ('BOQTender_daftar') ?>">
-                                    <i class="icon mdi mdi-shopping-cart"></i><span>Penenturan BOQ</span>
-                                </a>
-                                <?php if($this->uri(0, 'boq')): ?>
-                                <ul class="sub-menu">
-                                    <li class="<?= ($this->uri(0, 'boq') && $this->uri(1, 'daftar') ? 'active':'') ?>">
-                                        <a href="<?= $this->pathFor ('BOQTender_daftar') ?>">Daftar Tender</a>
-                                    </li>
-                                    <li class="<?= ($this->uri(0, 'boq') && $this->uri(1, 'detail') ? 'active':'hidden') ?>">
-                                        <a role="button">Daftar BOQ Tender</a>
-                                    </li>
-                                </ul>
-                                <?php endif; ?>
+                            <li class="divider">
+                                <span class="label label-primary">Data Tender</span>
                             </li>
-                        <?php endif; ?>
+                            <li class="<?= $this->uri ('dashboard', 'active') ?>">
+                                <a href="<?= $this->pathFor ('DashboardPage') ?>"><i class="icon mdi mdi-home"></i><span>Dashboard</span></a>
+                            </li>
 
-                        <?php if (in_array ($active_user_data[ 'previledge' ], ['3', '4'])): ?>
-                        <li class="<?= ($this->uri(0, 'dokumen') && !$this->uri(1, 'approval') ? 'active open':'') ?>">
-                            <a href="<?= $this->pathFor('dokumenTender_daftar') ?>">
-                                <i class="icon mdi mdi-case-check"></i><span>Dokumen Kelengkapan</span>
-                            </a>
-                            <?php if($this->uri(0, 'dokumen')): ?>
+                            <li class="parent <?= ($this->uri(0, 'tender') && !$this->uri(1, 'approval') ? 'active':'') ?>">
+                                <a href="#"><i class="icon mdi mdi-assignment"></i><span>Berita Tender</span></a>
                                 <ul class="sub-menu">
-                                    <li class="<?= ($this->uri(0, 'dokumen') && $this->uri(1, 'daftar') ? 'active':'') ?>">
-                                        <a href="<?= $this->pathFor ('dokumenTender_daftar') ?>">Daftar Tender</a>
+                                    <li class="<?= ($this->uri(0, 'tender') && $this->uri(1, 'list') ? 'active':'') ?>">
+                                        <a href="<?= $this->pathFor ('beritaTender_daftar') ?>">Daftar Tender</a>
                                     </li>
-                                    <li class="<?= ($this->uri(0, 'dokumen') && $this->uri(1, 'detail') ? 'active':'hidden') ?>">
-                                        <a role="button">Daftar Dokumen Tender</a>
+                                    <li class="<?= ($this->uri(0, 'tender') && $this->uri(1, 'detail') ? 'active':'hidden') ?>">
+                                        <a role="button">Detail Tender</a>
+                                    </li>
+                                    <li class="<?= ($this->uri(0, 'tender') && $this->uri(1, 'add') ? 'active':'') ?>">
+                                        <a href="<?= $this->pathFor ('beritaTender_tambah') ?>">Tambah</a>
                                     </li>
                                 </ul>
+                            </li>
+
+                            <li class="parent <?= ($this->uri(0, 'rks-acara') && !$this->uri(1, 'approval') ? 'active open':'') ?>">
+                                <a href="#"><i class="icon mdi mdi-assignment"></i><span>RKS dan Berita Acara</span></a>
+                                <ul class="sub-menu">
+                                    <li class="<?= ($this->uri(0, 'rks-acara') && $this->uri(1, 'list') ? 'active':'') ?>">
+                                        <a href="<?= $this->pathFor ('rksAcara_daftar') ?>">Daftar Berita Tender</a>
+                                    </li>
+                                    <li class="<?= ($this->uri(0, 'rks-acara') && $this->uri(1, 'detail') ? 'active':'hidden') ?>">
+                                        <a href="">Daftar RKS Tender</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <?php if (in_array ($active_user_data[ 'previledge' ], ['3'])): ?>
+                                <li class="<?= $this->uri (0, 'unit-kerja', 'active') ?>">
+                                    <a href="<?= $this->pathFor ('unitKerja_daftar') ?>">
+                                        <i class="icon mdi mdi-assignment-account"></i><span>Penenturan Unit Kerja</span>
+                                    </a>
+                                </li>
                             <?php endif; ?>
-                        </li>
-                        <?php endif; ?>
 
-                        <?php if (in_array ($active_user_data[ 'previledge' ], ['2', '3'])): ?>
+                            <?php if (in_array ($active_user_data[ 'previledge' ], ['3', '4'])): ?>
+                                <li class="<?= $this->uri (0, 'boq', 'parent active open') ?>">
+                                    <a href="<?= $this->pathFor ('BOQTender_daftar') ?>">
+                                        <i class="icon mdi mdi-shopping-cart"></i><span>Penenturan BOQ</span>
+                                    </a>
+                                    <?php if($this->uri(0, 'boq')): ?>
+                                        <ul class="sub-menu">
+                                            <li class="<?= ($this->uri(0, 'boq') && $this->uri(1, 'daftar') ? 'active':'') ?>">
+                                                <a href="<?= $this->pathFor ('BOQTender_daftar') ?>">Daftar Tender</a>
+                                            </li>
+                                            <li class="<?= ($this->uri(0, 'boq') && $this->uri(1, 'detail') ? 'active':'hidden') ?>">
+                                                <a role="button">Daftar BOQ Tender</a>
+                                            </li>
+                                        </ul>
+                                    <?php endif; ?>
+                                </li>
+                            <?php endif; ?>
 
-                            <li class="divider"><span class="label label-danger">Approval Tender</span></li>
+                            <?php if (in_array ($active_user_data[ 'previledge' ], ['3', '4'])): ?>
+                                <li class="<?= ($this->uri(0, 'dokumen') && !$this->uri(1, 'approval') ? 'active open':'') ?>">
+                                    <a href="<?= $this->pathFor('dokumenTender_daftar') ?>">
+                                        <i class="icon mdi mdi-case-check"></i><span>Dokumen Kelengkapan</span>
+                                    </a>
+                                    <?php if($this->uri(0, 'dokumen')): ?>
+                                        <ul class="sub-menu">
+                                            <li class="<?= ($this->uri(0, 'dokumen') && $this->uri(1, 'daftar') ? 'active':'') ?>">
+                                                <a href="<?= $this->pathFor ('dokumenTender_daftar') ?>">Daftar Tender</a>
+                                            </li>
+                                            <li class="<?= ($this->uri(0, 'dokumen') && $this->uri(1, 'detail') ? 'active':'hidden') ?>">
+                                                <a role="button">Daftar Dokumen Tender</a>
+                                            </li>
+                                        </ul>
+                                    <?php endif; ?>
+                                </li>
+                            <?php endif; ?>
 
-                            <li class="parent <?= $this->uri (1, 'approval', 'active open') ?>">
-                                <a href="#"><i class="icon mdi mdi-assignment-check"></i><span>Approval Tender</span></a>
-                                <ul class="sub-menu">
-                                    <li class="<?= ($this->uri(0, 'tender') && $this->uri(1, 'approval') ? 'active':'') ?>">
-                                        <a href="<?= $this->pathFor ('beritaTender_daftarApproval') ?>">Berita Tender</a>
-                                    </li>
-                                    <li class="<?= ($this->uri(0, 'rks-acara') && $this->uri(1, 'approval') ? 'active':'') ?>">
-                                        <a href="<?= $this->pathFor ('rksAcara_daftarApproval') ?>">RKS</a>
-                                    </li>
-                                    <li class="<?= ($this->uri(0, 'boq') && $this->uri(1, 'approval') ? 'active':'') ?>">
-                                        <a href="<?= $this->pathFor ('BOQTender_daftarApproval') ?>">BOQ</a>
-                                    </li>
-                                    <li class="<?= ($this->uri(0, 'dokumen') && $this->uri(1, 'approval') ? 'active':'') ?>">
-                                        <a href="<?= $this->pathFor ('dokumenTender_daftarApproval') ?>">Dokumen</a>
-                                    </li>
-                                </ul>
+                            <?php if (in_array ($active_user_data[ 'previledge' ], ['2', '3'])): ?>
+
+                                <li class="divider"><span class="label label-danger">Approval Tender</span></li>
+
+                                <li class="parent <?= $this->uri (1, 'approval', 'active open') ?>">
+                                    <a href="#"><i class="icon mdi mdi-assignment-check"></i><span>Approval Tender</span></a>
+                                    <ul class="sub-menu">
+                                        <li class="<?= ($this->uri(0, 'tender') && $this->uri(1, 'approval') ? 'active':'') ?>">
+                                            <a href="<?= $this->pathFor ('beritaTender_daftarApproval') ?>">Berita Tender</a>
+                                        </li>
+                                        <li class="<?= ($this->uri(0, 'rks-acara') && $this->uri(1, 'approval') ? 'active':'') ?>">
+                                            <a href="<?= $this->pathFor ('rksAcara_daftarApproval') ?>">RKS</a>
+                                        </li>
+                                        <li class="<?= ($this->uri(0, 'boq') && $this->uri(1, 'approval') ? 'active':'') ?>">
+                                            <a href="<?= $this->pathFor ('BOQTender_daftarApproval') ?>">BOQ</a>
+                                        </li>
+                                        <li class="<?= ($this->uri(0, 'dokumen') && $this->uri(1, 'approval') ? 'active':'') ?>">
+                                            <a href="<?= $this->pathFor ('dokumenTender_daftarApproval') ?>">Dokumen</a>
+                                        </li>
+                                    </ul>
+                                </li>
+
+                            <?php endif; ?>
+
+                            <li class="divider">
+                                <span class="label label-default">Pengaturan</span>
                             </li>
 
+                            <li>
+                                <a href="<?= $this->pathFor('dokumenMaster_daftar') ?>"><i class="icon mdi mdi-file-text"></i><span>Dokumen Master Adm</span></a>
+                            </li>
+
+                        <?php else: ?>
+                            <li class="<?=  (in_array ($active_user_data[ 'previledge' ], ['5']) ? '' : 'hidden') ?>">
+                                <a href="<?= $this->pathFor('users_daftar') ?>"><i class="icon mdi mdi-run"></i><span>Pengguna</span></a>
+                            </li>
                         <?php endif; ?>
-
-                        <li class="divider"><span class="label label-default">Pengaturan</span></li>
-
-                        <li>
-                            <a href="<?= $this->pathFor('dokumenMaster_daftar') ?>"><i class="icon mdi mdi-file-text"></i><span>Dokumen Master Adm</span></a>
-                        </li>
-
-                        <li>
-                            <a href="<?= $this->pathFor('users_daftar') ?>"><i class="icon mdi mdi-run"></i><span>Pengguna</span></a>
-                        </li>
                     </ul>
                 </div>
             </div>
