--- a/app/views/users/daftar.phtml
+++ b/app/views/users/daftar.phtml
@@ -7,6 +7,7 @@ $this->layout ('base', $parent_data);
 $this->start ('style');
 ?>
 <link rel="stylesheet" type="text/css" href="public/assets/lib/datatables/css/dataTables.bootstrap.min.css"/>
+<link rel="stylesheet" type="text/css" href="public/assets/lib/select2/css/select2.min.css"/>
 <!--tempat css/style-->
 <?php
 $this->stop ();
@@ -23,9 +24,9 @@ $this->start ('contents');
         <div class="panel-heading">
             Daftar Pengguna
             <div class="tools">
-                <a href="<?= $this->pathFor ('beritaTender_tambah') ?>" class="btn btn-space btn-primary">
-                    <i class="icon icon-left mdi mdi-plus-circle-o" style="color:#fff"></i>
-                    Tambah
+                <a role="button" class="btn btn-space btn-primary open-modal-add-user">
+                    <i class="icon icon-left mdi mdi-account-add" style="color:#fff"></i>
+                    Undang Pengguna
                 </a>
             </div>
         </div>
@@ -48,6 +49,71 @@ $this->start ('contents');
         </div>
     </div>
 </div>
+
+<div id="modal-add-user" class="modal-container colored-header colored-header-primary modal-effect-1">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" data-dismiss="modal" aria-hidden="true" class="close modal-close"><span class="mdi mdi-close"></span></button>
+            <h3 class="modal-title">Undang Pengguna</h3>
+        </div>
+        <div class="modal-body">
+            <form class="form-horizontal" data-toggle="validator" method="post" action="<?= $this->pathFor('users_invite') ?>">
+                <input type="hidden" name="jabatan">
+                <div class="form-group has-feedback">
+                    <label class="col-sm-3 control-label">Email Pengguna</label>
+                    <div class="col-sm-9">
+                        <input type="email" name="email" placeholder="direktur@email.com" class="form-control" data-remote="<?= $this->pathFor('checkEmail') ?>" required data-remote-error="Email telah terdaftar!" data-required-error="Wajib di-isi!" data-type-error="Mohon masukkan email!">
+                        <span class="help-block with-errors"></span>
+                    </div>
+                </div>
+                <div class="form-group has-feedback">
+                    <label class="col-sm-3 control-label">Jabatan</label>
+                    <div class="col-sm-9">
+                        <select class="select2" name="previledge" required="" data-required-error="Mohon pilih jabatan!">
+                            <option value=""></option>
+                            <optgroup label="Administrasi">
+                                <option value="1">Admin</option>
+                                <option value="4">Unit Kerja</option>
+                            </optgroup>
+                            <optgroup label="Manajerial">
+                                <option value="2">Direktur</option>
+                                <option value="3">Manajer</option>
+                            </optgroup>
+                            <optgroup label="Super Admin">
+                                <option value="5">Super Admin</option>
+                            </optgroup>
+                        </select>
+                        <span class="help-block with-errors"></span>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" data-dismiss="modal" class="btn btn-default btn-cancel modal-close">Cancel</button>
+            <button type="button" data-dismiss="modal" class="btn btn-primary btn-ok modal-close">Proceed</button>
+        </div>
+    </div>
+</div>
+<div id="modal-delete-dok" class="modal-container modal-effect-8" style="perspective: 1300px; height: 382px;">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" data-dismiss="modal" aria-hidden="true" class="close modal-close"><span class="mdi mdi-close"></span></button>
+        </div>
+        <div class="modal-body">
+            <div class="text-center">
+                <span class="modal-main-icon mdi mdi-delete text-danger"></span>
+                <h3>Hapus!</h3>
+                <p>Apakah anda yakin akan menghapus dokumen <strong></strong>?</p>
+                <div class="xs-mt-50">
+                    <button type="button" data-dismiss="modal" class="btn btn-danger btn-space btn-delete modal-close">Hapus</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-default btn-space modal-close">Batal</button>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer"></div>
+    </div>
+</div>
+<div class="modal-overlay"></div>
 <!--akhir tempat konten-->
 <?php
 $this->stop ();
@@ -55,6 +121,7 @@ $this->start ('js');
 ?>
 <!--tempat js-->
 
+<script src="public/assets/lib/jquery.niftymodals/dist/jquery.niftymodals.js" type="text/javascript"></script>
 <script src="public/assets/lib/datatables/js/jquery.dataTables.min.js" type="text/javascript"></script>
 <script src="public/assets/lib/datatables/js/dataTables.bootstrap.min.js" type="text/javascript"></script>
 <script src="public/assets/lib/datatables/plugins/buttons/js/dataTables.buttons.js" type="text/javascript"></script>
@@ -64,9 +131,18 @@ $this->start ('js');
 <script src="public/assets/lib/datatables/plugins/buttons/js/buttons.colVis.js" type="text/javascript"></script>
 <script src="public/assets/lib/datatables/plugins/buttons/js/buttons.bootstrap.js" type="text/javascript"></script>
 <script src="public/assets/js/app-tables-datatables.js" type="text/javascript"></script>
+<script src="public/assets/lib/select2/js/select2.min.js" type="text/javascript"></script>
+<script src="public/assets/js/jquery.form.min.js" type="text/javascript"></script>
+<script src="public/assets/js/validator.min.js" type="text/javascript"></script>
 <script>
     $(document).ready(function () {
         //We use this to apply style to certain elements
+        $.fn.modal.Constructor.prototype.enforceFocus = $.noop;
+        $.fn.niftyModal('setDefaults', {
+            overlaySelector: '.modal-overlay',
+            closeSelector: '.modal-close',
+            classAddAfterOpen: 'modal-show',
+        });
         $.extend( true, $.fn.dataTable.defaults, {
             dom:
             "<'row be-datatable-header'<'col-sm-6'l><'col-sm-6'f>>" +
@@ -91,7 +167,7 @@ $this->start ('js');
             },
         });
 
-        var userTable = $('#table-berita-tender').dataTable({
+        var userTable = $('#table-berita-tender').DataTable({
             ajax:"<?= $this->pathFor('users_get') ?>",
             columns:[
                 {
@@ -155,6 +231,53 @@ $this->start ('js');
                 },
             ],
         });
+
+        $('.open-modal-add-user').on('click', function () {
+            $('#modal-add-user').niftyModal({
+                beforeOpen: function( modals ){
+                    var modal = $(modals.modalEl);
+                    modal.find('.select2').select2({
+                        placeholder: 'Pilih Pegawai',
+                        width: '100%',
+                    });
+                    modal.find('.select2').on('change', function () {
+                        modal.find('input[name="jabatan"]').val($(this).find('option:selected').text());
+                    });
+                },
+                buttons: [
+                    {
+                        class: 'btn-ok',
+                        callback: function ( btn, modals, event ) {
+                            var modal = $(modals.modalEl);
+                            modal.find('form').ajaxSubmit({
+                                dataType: 'json',
+                                clearForm: true,
+                                resetForm: true,
+                                beforeSubmit: function (formData, jqForm, options) {
+                                    for (var i=0; i < formData.length; i++) {
+                                        if (!formData[i].value) {
+                                            modal.find('form').validator('validate');
+                                            return false;
+                                        }
+                                    }
+                                },
+                                success: function (res, status, xhr, $form) {
+                                    if(res.status == 'success'){
+                                        $.gritter.add({
+                                            title: 'Berhasil',
+                                            text: 'Email undangan telah terkirim',
+                                            class_name: 'color success'
+                                        });
+                                        userTable.ajax.reload();
+                                    }
+                                }
+                            });
+
+                        }
+                    }
+                ],
+            })
+        })
     })
 </script>
 <?php $this->stop () ?>
